--- a/backend/llm_settings.json
+++ b/backend/llm_settings.json
@@ -1,15 +1,15 @@
 {
-  "context_size": 2048,
-  "output_tokens": 512,
+  "context_size": 8192,
+  "output_tokens": 1024,
   "batch_size": 512,
-  "n_threads": 2,
+  "n_threads": 12,
   "use_mmap": true,
   "use_mlock": false,
   "verbose": true,
   "temperature": 0.7,
   "top_p": 0.95,
   "repeat_penalty": 1.05,
-  "use_gpu": false,
+  "use_gpu": true,
   "streaming": true,
   "legacy_api": false
 }
